--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 <x3d width='800px' height='800px'>
 <scene>
-
+<Viewpoint position="-3416.25298 -2572.73072 2144.67544" orientation="0.78327 -0.39830 -0.47733 1.62970" 
+	centerOfRotation="0.00000 0.00000 0.00000" fieldOfView="0.78540" description="defaultX3DViewpointNode"></Viewpoint>
 <inline url="https://raw.githubusercontent.com/Mirobriga/Victoria/main/Victoria_Samotracia.x3d"> </inline>
 </scene>
 </x3d>
